06.11.2020 7 lesson + fixes